Fix background-image visibility

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@
         margin: 0 auto;
     }
     &-header {
-        background: url('/img/header_bg.png') no-repeat 0 0 / 100% 100%;
+        background: url('../img/header_bg.png') no-repeat 0 0 / 100% 100%;
     }
     &-about, &-work, &-twitter, &-footer {
         background: #f7f7f7;
@@ -105,11 +105,11 @@ img {
     }
 
     &__hugeImg-1 {
-        background: url('/img/work/work__hugeImg-1.png') no-repeat 0 0 / 100% 100%;
+        background: url('../img/work/work__hugeImg-1.png') no-repeat 0 0 / 100% 100%;
     }
 
     &__hugeImg-2 {
-        background: url('/img/work/work__hugeImg-2.png') no-repeat 0 0 / 100% 100%;
+        background: url('../img/work/work__hugeImg-2.png') no-repeat 0 0 / 100% 100%;
     }
 
     &__littleImg {
@@ -117,7 +117,7 @@ img {
     }
 
     &__littleImg-1 {
-        background: url('/img/work/work__littleImg-1.png') no-repeat 0 0 / 100% 100%;
+        background: url('../img/work/work__littleImg-1.png') no-repeat 0 0 / 100% 100%;
     }
 
     &__littleImg-2 {
@@ -290,12 +290,12 @@ img {
     }
 
     &__littleImg-1 {
-        background: url('/img/shop/shop__littleImg-1.png') no-repeat 0 0 / 100% 100%;
+        background: url('../img/shop/shop__littleImg-1.png') no-repeat 0 0 / 100% 100%;
 
     }
 
     &__littleImg-2 {
-        background: url('/img/shop/shop__littleImg-2.png') no-repeat 0 0 / 100% 100%;
+        background: url('../img/shop/shop__littleImg-2.png') no-repeat 0 0 / 100% 100%;
     }
 
     &__longImg {
@@ -303,11 +303,11 @@ img {
     }
 
     &__longImg-1 {
-        background: url('/img/shop/shop__longImg-1.png') no-repeat 0 0 / 100% 100%;
+        background: url('../img/shop/shop__longImg-1.png') no-repeat 0 0 / 100% 100%;
     }
 
     &__longImg-2 {
-        background: url('/img/shop/shop__longImg-2.png') no-repeat 0 0 / 100% 100%;
+        background: url('../img/shop/shop__longImg-2.png') no-repeat 0 0 / 100% 100%;
     }
 
     &__wideImg {
@@ -315,19 +315,19 @@ img {
     }
 
     &__wideImg-1 {
-        background: url('/img/shop/shop__wideImg-1.png') no-repeat 0 0 / 100% 100%;
+        background: url('../img/shop/shop__wideImg-1.png') no-repeat 0 0 / 100% 100%;
     }
 
     &__wideImg-2 {
-        background: url('/img/shop/shop__wideImg-2.png') no-repeat 0 0 / 100% 100%;
+        background: url('../img/shop/shop__wideImg-2.png') no-repeat 0 0 / 100% 100%;
     }
 
     &__littleImg-3 {
-        background: url('/img/shop/shop__littleImg-3.png') no-repeat 0 0 / 100% 100%;
+        background: url('../img/shop/shop__littleImg-3.png') no-repeat 0 0 / 100% 100%;
     }
 
     &__littleImg-4 {
-        background: url('/img/shop/shop__littleImg-4.png') no-repeat 0 0 / 100% 100%;
+        background: url('../img/shop/shop__littleImg-4.png') no-repeat 0 0 / 100% 100%;
     }
 
     &__button {
